Small bug fixes. Deleted unneeded files.